Images in, almost fully styled. Still need to fix alignment on status bar

--- a/css/all.css
+++ b/css/all.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 20px;
   background-color: #8253a1;
+  position: fixed;
+  top: 0px;
 }
 .top-bar {
   display: -webkit-box;
@@ -22,6 +24,7 @@
   width: 100%;
   height: 60px;
   background-color: #8253a1;
+  margin-top: 20px;
 }
 .top-bar-header {
   color: #fff;
@@ -29,7 +32,7 @@
   font-size: 24px;
 }
 .app-nav-bar {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   width: 100%;
   height: 60px;
@@ -85,4 +88,126 @@
   justify-content: center;
   color: #fff;
   font-size: 24px;
+}
+.feed-content {
+  width: 100%;
+  margin-bottom: 60px;
+}
+.feed-item {
+  width: 100%;
+}
+.feed-item-stats {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: space-between;
+  -moz-box-pack: space-between;
+  -ms-flex-pack: space-between;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.feed-item-stats .flex-center {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: flex-start;
+  -moz-box-pack: flex-start;
+  -ms-flex-pack: flex-start;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.feed-item-stats .flex-center > * {
+  margin-right: 5px;
+}
+.feed-item-stats .left-align {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+}
+.feed-item-stats .left-align flex,
+.feed-item-stats .left-align > * {
+  margin-right: 5px;
+}
+.feed-item-stats .right-align {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: space-around;
+  -moz-box-pack: space-around;
+  -ms-flex-pack: space-around;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 5px;
+  box-sizing: border-box;
+  color: #8253a1;
+  display: inline-block;
+}
+.feed-item-stats .right-align * {
+  margin-left: 5px;
+  display: inline-block;
+}
+.feed-item-stats .user-name {
+  color: #8253a1;
+}
+.feed-item-stats .profile-image {
+  height: 30px;
+  width: 30px;
+  background-position: center;
+  background-size: cover;
+  background-image: url("/img/profile-pics/1.jpeg");
+  border-radius: 30px;
+  border: 2px solid #8253a1;
+  min-width: 30px;
+  min-height: 30px;
+}
+.feed-item-photo {
+  width: 100%;
+}
+.feed-item-photo .feed-item-photo-image {
+  max-width: 100%;
+  height: auto;
+  width: auto 9;
 }
