--- a/css/app-nav-bar.css
+++ b/css/app-nav-bar.css
@@ -1,5 +1,5 @@
 .app-nav-bar {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   width: 100%;
   height: 60px;
