--- a/css/feed-content.css
+++ b/css/feed-content.css
@@ -1,94 +1,3 @@
-.status-bar {
-  width: 100%;
-  height: 20px;
-  background-color: #8253a1;
-  position: fixed;
-  top: 0px;
-}
-.top-bar {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  width: 100%;
-  height: 60px;
-  background-color: #8253a1;
-  margin-top: 20px;
-}
-.top-bar-header {
-  color: #fff;
-  font-family: 'Muli', sans-serif;
-  font-size: 24px;
-}
-.app-nav-bar {
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-  height: 60px;
-  background-color: #808080;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  -moz-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: space-around;
-  -moz-box-pack: space-around;
-  -ms-flex-pack: space-around;
-  -webkit-justify-content: space-around;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.settings-button {
-  height: 60px;
-  width: 100%;
-}
-.new-photo-button {
-  height: 60px;
-  background-color: #8253a1;
-  width: 100%;
-}
-.photos-button {
-  height: 60px;
-  width: 100%;
-}
-.center-button {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  color: #fff;
-  font-size: 24px;
-}
 .feed-content {
   width: 100%;
   margin-bottom: 60px;
@@ -182,7 +91,7 @@
   align-items: center;
   padding: 5px;
   box-sizing: border-box;
-  color: #8253a1;
+  color: ppurple;
   display: inline-block;
 }
 .feed-item-stats .right-align * {
@@ -190,7 +99,7 @@
   display: inline-block;
 }
 .feed-item-stats .user-name {
-  color: #8253a1;
+  color: ppurple;
 }
 .feed-item-stats .profile-image {
   height: 30px;
@@ -199,7 +108,7 @@
   background-size: cover;
   background-image: url("/img/profile-pics/1.jpeg");
   border-radius: 30px;
-  border: 2px solid #8253a1;
+  border: 2px solid ppurple;
   min-width: 30px;
   min-height: 30px;
 }
@@ -210,14 +119,4 @@
   max-width: 100%;
   height: auto;
   width: auto 9;
-}
-html,
-body {
-  width: 100%;
-  height: 100%;
-  font-family: 'Muli', sans-serif;
-}
-.app-container {
-  width: 100%;
-background-color
 }
