--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 20px;
   background-color: ppurple;
+  position: fixed;
+  top: 0px;
 }
 .top-bar {
   display: -webkit-box;
@@ -22,6 +24,7 @@
   width: 100%;
   height: 60px;
   background-color: ppurple;
+  margin-top: 20px;
 }
 .top-bar-header {
   color: pwhite;
